# mpu9250rpi

./: CMakeLists.txt  README.md
example/: mpuTest.cpp
src/: ArduinoCrap.h  MPU9250_RegisterMap.h  Mpu9250.h  SparkFunMPU9250-DMP.cpp  SparkFunMPU9250-DMP.h
src/util/: arduino_mpu9250_clk.c  arduino_mpu9250_i2c.cpp  arduino_mpu9250_i2c.h  arduino_mpu9250_log.cpp  inv_mpu.c  inv_mpu_dmp_motion_driver.c  rpi_porting.c  rpi_porting.h
